test/syntax/09-member_declaration_list-err.c
// ======================================================================

/* member_declaration_list -> member_declaration_list member_declaration
                            | member_declaration */

// ======================================================================

struct human {
  int age;
  name;		// error: not a member_declaration
} h1;

void main(void)
{

}

// ======================================================================
